--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <button id="create-grid">Create new grid</button>
-        <div id="main-container">
+        <div class="buttons">
+            <button id="clear">Clear</button>
+            <button id="black">Black</button>
+            <button id="red">Red</button>
+            <button id="blue">Blue</button>
         </div>
     </body>
     <script src="script.js"></script>
