--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <button id="black">Black</button>
             <button id="red">Red</button>
             <button id="blue">Blue</button>
+            <button id="random">Random</button>
         </div>
     </body>
     <script src="script.js"></script>
