--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <title>Etch-a-Sketch</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet"> 
     </head>
     <body>
+        <h1>Etch-a-Sketch</h1>
         <div class="buttons">
             <button id="clear">Clear</button>
             <button id="black">Black</button>
