--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <h1>Etch-a-Sketch</h1>
+        <div class="etch-sketch">
+            <h1>Etch-a-Sketch</h1>
+            <p>By <a href="https://github.com/zLomb">zLomb</a></p>
+        </div>
         <div class="buttons">
             <button id="clear">Clear</button>
             <button id="black">Black</button>
